Kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ai-document-producer-pod
  labels:
    app: ai-document-producer
spec:
  containers:
  - name: ai-document-producer-container
    image: demoregistrysuj.azurecr.io/ai-document-producer:latest
    ports:
    - containerPort: 7860
