Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-document-producer-service
spec:
  type: LoadBalancer
  selector:
    app: ai-document-producer
  ports:
  - protocol: TCP
    port: 7860
    targetPort: 7860
